# Econometrics

./: .gitignore  README.md
Generator/: .gitignore  CMakeLists.txt
Generator/include/: Generator.h  Parser.h
Generator/resources/: betas_0.txt  betas_1.txt  betas_2.txt  betas_3.txt  distrib_0.txt  distrib_2.txt
Generator/src/: Generator.cpp  Parser.cpp  main.cpp
Lab_1/: .gitignore  CMakeLists.txt  Readme.md  Visualization.ipynb  input.txt
Lab_1/include/: LinearRegression.h  Parser.h  mann_whitney.h
Lab_1/src/: LinearRegression.cpp  Parser.cpp  main.cpp  mann_whitney.cpp
Lab_2/: Readme.md
